<resources>
    <string name="title_activity_receive_debug">ReceiveDebugActivity</string>
    <string name="title_activity_piddebug">PIDDebugActivity</string>
    <string name="title_activity_enviornmental_check">EnviornmentalCheckActivity</string>
    <string name="title_activity_display_item">Issue details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_logout_key">pref_logout</string>
    <string name="pref_logout_label">Log Out</string>
    <string name="pref_email_key">pref_email_key</string>
    <string name="pref_username_key">pref_username_key</string>
    <string name="pref_phone_number_key">pref_phone_number_key</string>
    <string name="pref_privacy_policy">pref_privacy_policy</string>
    <string name="pref_term_of_use">pref_term_of_use</string>
    <string name="debug_toast_message">This is a debug build - </string>
    <string-array name="permissions_location">
        <item>android.permission.ACCESS_FINE_LOCATION</item>
    </string-array>
    <string name="request_permission_message_default">Please grant our permission requests to allow Pitstop app to function.</string>
    <string name="request_permission_location_message">To communicate with the Pitstop Bluetooth device and access to the trips feature, we need the permission to access your location. You will be prompted for permission after closing this popup.</string>
    <string name="debug_drawer_header">Debug</string>
    <string name="debug_clear_prefs">Clear Prefs</string>
    <string name="debug_clear_db">Clear DB</string>
    <string name="debug_random_vin">Random Vin</string>
    <string name="debug_log_header">Logging</string>
    <string name="debug_log_bt">Log Bluetooth</string>
    <string name="debug_log_network">Log Network</string>
    <string name="debug_log_other">Log Other</string>
    <string name="debug_message_bluetooth_toggle">Toggle Bluetooth Logs</string>
    <string name="debug_message_network_toggle">Toggle Network Logs</string>
    <string name="debug_message_other_toggle">Toggle Other Logs</string>
    <string name="app_name">Pitstop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_car">Add Car</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_vehicles">vehicles</string>
    <string name="appinfo">appinfo</string>
    <string name="app_build_no">1.0.10</string>
    <string name="add_car_bluetooth">Use the Search for Car button to scan for car. Make sure your device is plugged in and ready to go. Below are various location that the OBD plug can be at.</string>
    <string name="add_car_manual">Enter your vehicle\'s mileage and VIN. Below are the various location that the VIN scannerId code can be at.</string>
    <string name="severity_indicator_low">Low</string>
    <string name="severity_indicator_medium">Medium</string>
    <string name="severity_indicator_high">High</string>
    <string name="severity_indicator_critical">Critical</string>
    <string name="camera_request_rationale">Access to the camera is needed for barcode detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="location_request_rationale">Access to device location is needed for bluetooth feature and trip tracking</string>
    <string name="appversion">app_version</string>
    <string name="description1">With Pitstop, we deliver the power of service to the convenience of the smartphone. Pitstop provides real-time notifications on recommended services and diagnostic reports, directly to the user\'s smartphone.</string>
    <string name="whatneeded">What is needed from you</string>
    <string name="bluetooth_header">Bluetooth for Module</string>
    <string name="internet_header">Internet Connection</string>
    <string name="car_header">Car for Diagnostics</string>
    <string name="bluetooth_desc">Please go to settings to turn your bluetooth on.</string>
    <string name="internet_desc">Turn on your internet connection in order for us to tell you what\'s going on with your car</string>
    <string name="car_desc">Turn your car on in order for the module to send data back to the app</string>
    <string name="first_service_booking_1">Let\'s be proactive and book your vehicle\'s 1st service appointment today. </string>
    <string name="first_service_booking_2">Pitstop has calculated an estimated time we believe you will be due for your 1st service appointment.\n\nWhen your appointment is getting close, we will send you a reminder letting you know whether or not you are due for service.\n\nThe power of being connected.</string>
    <string name="first_service_booking_cancel_title">Quit Booking</string>
    <string name="first_service_booking_cancel_message">Are you sure you don\'t want to book your 1st service appointment? By booking your tentative appointment you are securing your preferred date and time and creating a on \"vehicle maintenance\" reminder for yourself.</string>
    <string name="service_request_button">Request Service</string>
    <string name="flat_tire_description">The tires on your vehicle are what keep it rolling. They take a beating from sharp turns, rocks, potholes, changes in temperature and the wear from friction on the road. It\'s time for you to inspect tire pressure and wear. Tires in poor condition can cause other mechanical parts to wear out faster.</string>
    <string name="engine_oil_filter_description">Change engine oil and replace engine filter to remove contaminants and prolong the life of your motor.</string>
    <string name="wipers_fluids_description">Visibility is a critical part of safety while driving. Making sure your fluids are topped up and windshield wipers are intact is an important way to make sure your car is safe to drive.</string>
    <string name="tow_truck_description">Send an emergency request to the dealership to help you get your vehicle into the shop. Breakdowns are frustrating we are here to help. Be aware of the hours of operation of the dealership, after hours you may need to call a tow truck yourself.</string>
    <string name="shuttle_service_description">Request for the dealership to coordinate a loaner vehicle or a shuttle to pick you up from your location.</string>
    <string name="preset_issue_service_emergency">Emergency</string>
    <string name="preset_issue_service_replace">Replace</string>
    <string name="preset_issue_service_request">Request</string>
    <string name="preset_issue_item_flat_tire">Flat Tire</string>
    <string name="preset_issue_item_tow_truck">Tow Truck</string>
    <string name="preset_issue_item_engine_oil_filter">Engine Oil &amp; Filter</string>
    <string name="preset_issue_item_wipers_fluids">Wipers/Fluids</string>
    <string name="preset_issue_item_shuttle_service">Shuttle Service</string>
    <string name="add_preset_issue_dialog_prompt_message">Do you want to add more services in addition to the services already in your dashboard?</string>
    <string name="dialog_clear_issue_title">When was this service completed?</string>
    <string name="transition_name_issue_card">transition_name_issue_card</string>
    <string name="transition_name_issue_title">transition_name_issue_title</string>
    <string name="transition_name_issue_description">transition_name_issue_description</string>
    <string name="transition_name_request_service_btn">transition_name_request_service_btn</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="notifications">Notifications</string>
    <string name="feature_bluetooth">Pitstop uses a device that is installed into the diagnostic port of your vehicle which transmits the vehicle\'s engine and sensor data to your phone over bluetooth.</string>
    <string name="feature_cloud">"Pitstop is thoroughly compiling data sources from manufacturers, dealerships, and other vehicles to consistently provide with you with the most accurate information about your vehicle.</string>
    <string name="feature_notification">Pitstop alerts you when your vehicle is due for service, when there\'s a manufacturing recall, and when there is an issue with your engine.</string>
    <string name="logging_in_message">Logging in..&#8230;.</string>
    <string name="sign_up_fb">Sign up with facebook</string>
    <string name="log_in_button">LOG IN</string>
    <string name="log_in_fb">Log in with Facebook</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="internet_check_error">Please check your internet connection</string>
    <string name="empty_email_pass_error">Email or Password Field are not filled</string>
    <string name="empty_name_error">First and last name are required</string>
    <string name="password_length_error">Password length must be greater than 8</string>
    <string name="scan">Scan</string>
    <string name="services_nav_text">Services</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="no_cars_dashboard">There are no cars \n in your Garage</string>
    <string name="or">OR</string>
    <string name="contact_us_for_support">Contact us for support</string>
    <string name="sharp_turn_proposal">During any trip, take note of any turns that you will have to make so that you can prepare in advance by slowing down to get nice, smooth turns - your passengers will thank you.</string>
    <string name="dashboard">Dashboard</string>
    <string name="tap_to_change_name">Tap to change your name</string>
    <string name="tap_to_change_email">Tap to change your email Address</string>
    <string name="tap_to_change_phone">Tap to change your phone Number</string>
    <string name="app_info">App Info</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="app_version">App Version</string>
    <string name="et_ready_step_6">6. Do not turn the engine off during the above driving cycle until the very end (no stopping for a coffee in between any step!)</string>
    <string name="et_ready_step_5">5. Drive the vehicle for at least 20 minutes in stop and go traffic with at least four idle periods (engine running while at a stop).</string>
    <string name="et_ready_step_4">4. Drive the vehicle for a minimum of 10 minutes at highway speeds (between 90 km/hr and 110 km/hr).</string>
    <string name="et_ready_step_3">3. Start the engine and before driving it, let it sit and idle to warm it up to normal operating temperature.</string>
    <string name="et_ready_step_2">2. The vehicle must sit for a minimum 8 hour period, without a start.</string>
    <string name="et_ready_step_1">1. You must start this process with a fuel level of between ¼ and ¾ full.</string>
    <string name="et_ready_step_title">Follow the steps below to get your vehicle into an emissions test ready state</string>
    <string name="your_value">Value</string>
    <string name="your_device_threshold">Threshold</string>
    <string name="sharp_turn_description">Your Pitstop Device detected a sudden change in the direction of your car’s motion which indicates a sharp turn was made. Whether you were practicing your drifting skills, or taking the on ramp with a smile, we hope everything is well.</string>
    <string name="sharp_pitstop_proposal">Proposal</string>
    <string name="email">Email</string>
    <string name="pitstop_splash_description">Your car will be healthier, and driving will be safer.</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_password_hint">Enter a password (min 8 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
</resources>