<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:text="@string/et_ready_step_title"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/divider" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/et_ready_step_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/et_ready_step_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/et_ready_step_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/et_ready_step_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/et_ready_step_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/et_ready_step_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

    </LinearLayout>

</LinearLayout>