<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/black50">

        <LinearLayout
            android:id="@+id/debug_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/debug_drawer_header"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/debugClearPrefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_clear_prefs"/>

            <Button
                android:id="@+id/debugClearDB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_clear_db" />

            <Button
                android:id="@+id/debugRandomVin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_random_vin" />
            
            <EditText
                android:id="@+id/debugVinField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white80"
                android:padding="8dp"
                />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>