<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen"/>

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/whitelogo"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/pitstop_splash_description" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email_field"
        android:layout_above="@id/password_field"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/edittext_onboarding_outline"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_field"
        android:layout_above="@id/password_confirm_field"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/create_password_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/edittext_onboarding_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_confirm_field"
        android:layout_above="@id/signup_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/edittext_onboarding_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signup_button"
        android:text="@string/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/round_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>