<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pitstop.ui.add_car.PromptAddCarActivity">


    <TextView
        android:id="@+id/no_car_line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/no_cars_dashboard"
        android:textAlignment="center"
        android:textColor="#aaaaaa"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/addCarButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/primary"
            android:minWidth="250dp"
            android:onClick="startAddCarActivity"
            android:padding="16dp"
            android:text="@string/title_activity_add_car"
            android:textAllCaps="false"
            android:textColor="#efefef"
            android:textSize="18sp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:backgroundTint="@color/primary"
            android:minWidth="250dp"
            android:onClick="startAddCarActivity"
            android:padding="16dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="#efefef"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@color/black" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:text="@string/or"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/support_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="18dp"
            android:text="@string/contact_us_for_support"
            android:textColor="@color/primary" />

    </LinearLayout>

</RelativeLayout>
