<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/load_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        layout="@layout/layout_load"/>

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen"/>

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/whitelogo"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/pitstop_splash_description" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name_field"
        android:layout_above="@id/last_name_field"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/edittext_onboarding_outline"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name_field"
        android:layout_above="@id/phone_number_field"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:hint="@string/last_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/edittext_onboarding_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_number_field"
        android:layout_above="@id/signup_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:hint="@string/phone_number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/edittext_onboarding_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signup_button"
        android:text="@string/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/round_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>